added tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
 # Bind escape to copy mode
 unbind [
 bind Escape copy-mode
+# add default bashrc config
+new -n Onur bash --login
 
 # p = paste
 unbind p
