--- a/tmux.conf
+++ b/tmux.conf
@@ -130,3 +130,6 @@ bind -n C-Left resize-pane -L 10
 bind -n C-Right resize-pane -R 10
 bind -n C-Down resize-pane -D 5
 bind -n C-Up resize-pane -U 5
+
+# add tmux ressurrect
+run-shell ~/dotfiles/tmux-resurrect/resurrect.tmux
