set antialiasing in gui

--- a/tmux.conf
+++ b/tmux.conf
@@ -133,3 +133,8 @@ bind -n C-Up resize-pane -U 5
 
 # add tmux ressurrect
 run-shell ~/dotfiles/tmux-resurrect/resurrect.tmux
+
+# for vim
+set -g @resurrect-strategy-vim 'session'
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
