--- a/tmux.conf
+++ b/tmux.conf
@@ -138,3 +138,7 @@ run-shell ~/dotfiles/tmux-resurrect/resurrect.tmux
 set -g @resurrect-strategy-vim 'session'
 # for neovim
 set -g @resurrect-strategy-nvim 'session'
+
+# set powerline for tmux
+run-shell "powerline-daemon -q"
+run-shell "powerline-config tmux setup"
