--- a/tmux.conf
+++ b/tmux.conf
@@ -140,5 +140,15 @@ set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 
 # set powerline for tmux
-run-shell "powerline-daemon -q"
-run-shell "powerline-config tmux setup"
+#run-shell "powerline-daemon -q"
+#run-shell "powerline-config tmux setup"
+
+set -g status-interval 1
+set -g status-style "bg=colour233"
+set -g status-left-length 20
+set -g status-right "#[fg=colour233,bg=default,nobold,noitalics,nounderscore] #[fg=colour247,bg=colour233,nobold,noitalics,nounderscore] ⇑  #(uptime | awk '{print $3}'|sed 's/,//')#[fg=colour241,bg=colour233,nobold,noitalics,nounderscore] #[fg=colour2,bg=colour233,nobold,noitalics,nounderscore] ♬ #(sh ~/dotfiles/tmux/current_track.sh)#[fg=colour236,bg=colour233,nobold,noitalics,nounderscore] #[fg=colour247,bg=colour236,nobold,noitalics,nounderscore]%d-%b-%Y #[fg=colour241,bg=colour236,nobold,noitalics,nounderscore] #[fg=colour252,bg=colour236,bold,noitalics,nounderscore] %l:%M %p#[fg=colour252,bg=colour236,nobold,noitalics,nounderscore] #[fg=colour16,bg=colour252,bold,noitalics,nounderscore]♡ #(pmset -g batt | awk '{print $2, $4}'| tail -1)h"
+set -g status-right-length 250
+set -g window-status-format '#[fg=colour244,bg=colour233,nobold,noitalics,nounderscore]  #I #[fg=colour240,bg=colour233,nobold,noitalics,nounderscore] #[fg=colour31]#W   '
+set -g window-status-current-format '#[fg=colour233,bg=colour31,nobold,noitalics,nounderscore] #[fg=colour117,bg=colour31,nobold,noitalics,nounderscore]#I  #[fg=colour231,bg=colour31,bold,noitalics,nounderscore]#W #[fg=colour31,bg=colour233,nobold,noitalics,nounderscore] '
+set -g status-left '#[fg=colour16,bg=colour254,bold,noitalics,nounderscore] #S #[fg=colour254,bg=colour233,nobold,noitalics,nounderscore]'
+
