add CPU temperature on tmux status bar. Note it does not work with rvm installed.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,6 @@
 # Bind escape to copy mode
 unbind [
 bind Escape copy-mode
-# add default bashrc config
-new -n Onur bash --login
 
 # p = paste
 unbind p
@@ -28,8 +26,8 @@ set -g renumber-windows on
 set -g default-terminal "screen-256color"
 
 # change tmux bar colors
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+#set -g status-bg '#666666'
+#set -g status-fg '#aaaaaa'
 
 # Keep plenty of history for scrollback
 set -g history-limit 10000
@@ -74,13 +72,6 @@ bind C-k swap-pane -U
 # increase display time
 set -g display-panes-time 1200
 
-# status bar stuff
-set -g status-left-length 40
-
-# Simplify status bar display.
-set -g status-left '[#S]'
-set -g status-right "%I:%M %p "
-# set -g status-right "#[fg=red][44%%]#[default]   -  %I:%M %p "
 
 # Dismiss current pane to background window
 bind b break-pane -d
@@ -139,15 +130,11 @@ set -g @resurrect-strategy-vim 'session'
 # for neovim
 set -g @resurrect-strategy-nvim 'session'
 
-# set powerline for tmux
-#run-shell "powerline-daemon -q"
-#run-shell "powerline-config tmux setup"
-
-set -g status-interval 1
+set -g status-interval 5
 set -g status-style "bg=colour233"
 set -g status-left-length 20
-set -g status-right "#[fg=colour233,bg=default,nobold,noitalics,nounderscore] #[fg=colour247,bg=colour233,nobold,noitalics,nounderscore] ⇑  #(uptime | awk '{print $3}'|sed 's/,//')#[fg=colour241,bg=colour233,nobold,noitalics,nounderscore] #[fg=colour2,bg=colour233,nobold,noitalics,nounderscore] ♬ #(sh ~/dotfiles/tmux/current_track.sh)#[fg=colour236,bg=colour233,nobold,noitalics,nounderscore] #[fg=colour247,bg=colour236,nobold,noitalics,nounderscore]%d-%b-%Y #[fg=colour241,bg=colour236,nobold,noitalics,nounderscore] #[fg=colour252,bg=colour236,bold,noitalics,nounderscore] %l:%M %p#[fg=colour252,bg=colour236,nobold,noitalics,nounderscore] #[fg=colour16,bg=colour252,bold,noitalics,nounderscore]♡ #(pmset -g batt | awk '{print $2, $4}'| tail -1)h"
-set -g status-right-length 250
+set -g status-right "#[fg=colour233,bg=default,nobold,noitalics,nounderscore] #[fg=colour247,bg=colour233,nobold,noitalics,nounderscore] ⇑  #(uptime | awk '{print $3}'|sed 's/,//')#[fg=colour241,bg=colour233,nobold,noitalics,nounderscore] #[fg=colour2,bg=colour233,nobold,noitalics,nounderscore] ♬ #(sh ~/dotfiles/tmux/current_track.sh)#[fg=colour236,bg=colour233,nobold,noitalics,nounderscore] #[fg=colour247,bg=colour236,nobold,noitalics,nounderscore]%d-%b-%Y #[fg=colour241,bg=colour236,nobold,noitalics,nounderscore] #[fg=colour252,bg=colour236,bold,noitalics,nounderscore] %l:%M %p#[fg=colour252,bg=colour236,nobold,noitalics,nounderscore] #[fg=colour16,bg=colour252,bold,noitalics,nounderscore]♡ #(pmset -g batt | awk '{print $4}'| tail -1)h | #(iStats cpu | cut -c 11-14)°C "
+set -g status-right-length 400
 set -g window-status-format '#[fg=colour244,bg=colour233,nobold,noitalics,nounderscore]  #I #[fg=colour240,bg=colour233,nobold,noitalics,nounderscore] #[fg=colour31]#W   '
 set -g window-status-current-format '#[fg=colour233,bg=colour31,nobold,noitalics,nounderscore] #[fg=colour117,bg=colour31,nobold,noitalics,nounderscore]#I  #[fg=colour231,bg=colour31,bold,noitalics,nounderscore]#W #[fg=colour31,bg=colour233,nobold,noitalics,nounderscore] '
 set -g status-left '#[fg=colour16,bg=colour254,bold,noitalics,nounderscore] #S #[fg=colour254,bg=colour233,nobold,noitalics,nounderscore]'
