--- a/tmux.conf
+++ b/tmux.conf
@@ -134,9 +134,9 @@ set -g status-interval 5
 set -g status-style "bg=colour233"
 set -g status-left-length 20
 set -g status-right "#[fg=colour233,bg=default,nobold,noitalics,nounderscore] #[fg=colour247,bg=colour233,nobold,noitalics,nounderscore] ⇑  #(uptime | awk '{print $3}'|sed 's/,//')#[fg=colour241,bg=colour233,nobold,noitalics,nounderscore] #[fg=colour2,bg=colour233,nobold,noitalics,nounderscore] ♬ #(sh ~/dotfiles/tmux/current_track.sh)#[fg=colour236,bg=colour233,nobold,noitalics,nounderscore] #[fg=colour247,bg=colour236,nobold,noitalics,nounderscore]%d-%b-%Y #[fg=colour241,bg=colour236,nobold,noitalics,nounderscore] #[fg=colour252,bg=colour236,bold,noitalics,nounderscore] %l:%M %p#[fg=colour252,bg=colour236,nobold,noitalics,nounderscore] #[fg=colour236,bg=colour252,bold,noitalics,nounderscore]♡ #(uptime | rev | cut -d":" -f1 | rev | sed s/,//g) #[fg=colour16,bg=colour252,bold,noitalics,nounderscore] #(pmset -g batt | awk '{print $4}'| tail -1)h "
-set -g status-right-length 400
+set -g status-right-length 401
 set -g window-status-format '#[fg=colour244,bg=colour233,nobold,noitalics,nounderscore]  #I #[fg=colour240,bg=colour233,nobold,noitalics,nounderscore] #[fg=colour1]#W   '
 set -g window-status-current-format '#[fg=colour233,bg=colour1,nobold,noitalics,nounderscore] #[fg=colour231,bg=colour1,nobold,noitalics,nounderscore]#I  #[fg=colour231,bg=colour1,bold,noitalics,nounderscore]#W #[fg=colour1,bg=colour233,nobold,noitalics,nounderscore] '
-#set -g status-left '#[fg=colour16,bg=colour254,bold,noitalics,nounderscore] #S #[fg=colour254,bg=colour233,nobold,noitalics,nounderscore]'
-set -g status-left '#[fg=colour16,bg=colour254,bold,noitalics,nounderscore] #{?client_prefix, tmux ,#S} #[fg=colour254,bg=colour233,nobold,noitalics,nounderscore]'
+set -g status-left '#{?client_prefix,#[bg=colour1]#[fg=colour231]#[bold] #S #[fg=colour1]#[bg=colour233]#[nobold],#[bg=colour254]#[fg=colour16]#[bold] #S #[fg=colour254]#[bg=colour233]}'
+
 
