--- a/tmux.conf
+++ b/tmux.conf
@@ -33,10 +33,10 @@ set -g default-terminal "screen-256color"
 set -g history-limit 10000
 
 # mouse
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-setw -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
+#setw -g mode-mouse on
 
 bind m split-window -h 'reattach-to-user-namespace mutt'
 
