remove powerline seperators

--- a/tmux.conf
+++ b/tmux.conf
@@ -130,10 +130,10 @@ set -g @resurrect-strategy-nvim 'session'
 set -g status-interval 5
 set -g status-style "bg=colour10"
 set -g status-left-length 20
-set -g status-right "#[fg=colour10,bg=default,nobold,noitalics,nounderscore] #[fg=colour13,bg=colour10,nobold,noitalics,nounderscore] ⇑  #(uptime | awk '{print $3}'|sed 's/,//')#[fg=colour241,bg=colour10,nobold,noitalics,nounderscore] #[fg=colour2,bg=colour10,nobold,noitalics,nounderscore] ♬ #(sh ~/dotfiles/tmux/current_track.sh)#[fg=colour11,bg=colour10,nobold,noitalics,nounderscore] #[fg=colour13,bg=colour11,nobold,noitalics,nounderscore] %d-%b-%Y #[fg=colour241,bg=colour11,nobold,noitalics,nounderscore] #[fg=colour13,bg=colour11,bold,noitalics,nounderscore] %l:%M %p#[fg=colour13,bg=colour11,nobold,noitalics,nounderscore] #[fg=colour11,bg=colour13,bold,noitalics,nounderscore]♡ #(uptime | rev | cut -d":" -f1 | rev | sed s/,//g) #[fg=colour16,bg=colour13,bold,noitalics,nounderscore] #(pmset -g batt | awk '{print $4}'| tail -1)h "
+set -g status-right "#[fg=colour13,bg=colour10]⇑ #(uptime | awk '{print $3}'|sed 's/,//')#[fg=colour241] |#[fg=colour2,bg=colour10] ♬ #(sh ~/dotfiles/tmux/current_track.sh) #[fg=colour13,bg=colour11] %d-%b-%Y #[fg=colour241]|#[fg=colour13,bg=colour11,bold]%l:%M %p #[fg=colour11,bg=colour13,bold] ♡ #(uptime | rev | cut -d":" -f1 | rev | sed s/,//g) #[fg=colour16]| #(pmset -g batt | awk '{print $4}'| tail -1)h "
 set -g status-right-length 401
-set -g window-status-format '#[fg=colour244,bg=colour10,nobold,noitalics,nounderscore]  #I #[fg=colour240,bg=colour10,nobold,noitalics,nounderscore] #[fg=colour1]#W   '
-set -g window-status-current-format '#[fg=colour10,bg=colour1,nobold,noitalics,nounderscore] #[fg=colour231,bg=colour1,nobold,noitalics,nounderscore]#I  #[fg=colour231,bg=colour1,bold,noitalics,nounderscore]#W #[fg=colour1,bg=colour10,nobold,noitalics,nounderscore] '
-set -g status-left '#{?client_prefix,#[bg=colour1]#[fg=colour231]#[bold] #S #[fg=colour1]#[bg=colour10]#[nobold],#[bg=colour13]#[fg=colour16]#[bold] #S #[fg=colour13]#[bg=colour10]}'
+set -g window-status-format '#[fg=colour244,bg=colour10,nobold,noitalics,nounderscore] #I| #[fg=colour1]#W '
+set -g window-status-current-format '#[fg=colour231,bg=colour1] #I| #[fg=colour231,bg=colour1,bold]#W '
+set -g status-left '#{?client_prefix,#[bg=colour1]#[fg=colour231]#[bold] #S ,#[bg=colour13]#[fg=colour16]#[bold] #S }#[bg=colour10] '
 
 
