--- a/tmux.conf
+++ b/tmux.conf
@@ -25,18 +25,8 @@ set -g renumber-windows on
 # use 256 colors
 set -g default-terminal "screen-256color"
 
-# change tmux bar colors
-#set -g status-bg '#666666'
-#set -g status-fg '#aaaaaa'
-
 # Keep plenty of history for scrollback
 set -g history-limit 10000
-
-# mouse
-#set -g mouse-resize-pane on
-#set -g mouse-select-pane on
-#set -g mouse-select-window on
-#setw -g mode-mouse on
 
 bind m split-window -h 'reattach-to-user-namespace mutt'
 
@@ -57,41 +47,25 @@ bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 # Smart pane switching with awareness of vim splits
 # See this blog post for additional detail:
 # http://robots.thoughtbot.com/post/53022241323/seamlessly-navigate-vim-and-tmux-splits
+# depends on tmux-navigator vim plugin
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
-# Secondary binding for C-l to retain redraw
-bind C-l send-keys 'C-l'
-
-# Easy rotating of panes
-bind C-k swap-pane -U
 
 # increase display time
 set -g display-panes-time 1200
 
-
-# Dismiss current pane to background window
-bind b break-pane -d
-bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
 
 # more intuitive keybindings for splitting
 bind \ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 
-# Easy return to Vim from tmux runner zoom runner pane
-bind C-p run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys ':VtrZoomRunnerPane' 'C-m') || tmux send-keys 'C-c' && tmux select-pane -l"
-
-# Make C-j display a selectable list of sessions
-bind C-j choose-tree
-
 # Keep window names as I set them
 setw -g automatic-rename off
-
-# setw -g pane-base-index 1 # not recognized by my tmux
 
 # Reload tmux.conf with prefix-r
 bind C-r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
@@ -110,22 +84,6 @@ bind -n S-Left resize-pane -L 2
 bind -n S-Right resize-pane -R 2
 bind -n S-Down resize-pane -D 1
 bind -n S-Up resize-pane -U 1
-unbind -n C-Left
-unbind -n C-Down
-unbind -n C-Up
-unbind -n C-Right
-bind -n C-Left resize-pane -L 10
-bind -n C-Right resize-pane -R 10
-bind -n C-Down resize-pane -D 5
-bind -n C-Up resize-pane -U 5
-
-# add tmux ressurrect
-#run-shell ~/dotfiles/tmux-resurrect/resurrect.tmux
-
-# for vim
-set -g @resurrect-strategy-vim 'session'
-# for neovim
-set -g @resurrect-strategy-nvim 'session'
 
 set -g status-interval 5
 set -g status-style "bg=colour10"
