--- a/tmux.conf
+++ b/tmux.conf
@@ -28,21 +28,8 @@ set -g default-terminal "screen-256color"
 # Keep plenty of history for scrollback
 set -g history-limit 10000
 
-bind m split-window -h 'reattach-to-user-namespace mutt'
-
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-unbind -t vi-copy Space
-bind -t vi-copy Space jump-again
-
-bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
-bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 
 # Smart pane switching with awareness of vim splits
 # See this blog post for additional detail:
@@ -73,8 +60,9 @@ bind C-r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 # Set the term environment variable when using tmux
 set -g default-terminal "screen-256color"
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # Provide access to the clipboard for pbpaste, pbcopy (details: http://goo.gl/DN82E)
-set-option -g default-command "reattach-to-user-namespace -l zsh -l"
 set-window-option -g automatic-rename on
 
 # bind resizing of panes to H,J,K,L (resizes by steps of 10 lines/columns)
@@ -88,7 +76,7 @@ bind -n S-Up resize-pane -U 1
 set -g status-interval 5
 set -g status-style "bg=colour10"
 set -g status-left-length 20
-set -g status-right "#[fg=colour13,bg=colour10]⇑ #(uptime | awk '{print $3}'|sed 's/,//')#[fg=colour241] |#[fg=colour2,bg=colour10] ♬ #(sh ~/dotfiles/tmux/current_track.sh) #[fg=colour13,bg=colour11] %d-%b-%Y #[fg=colour241]|#[fg=colour13,bg=colour11,bold]%l:%M %p #[fg=colour11,bg=colour13,bold] ♡ #(uptime | rev | cut -d":" -f1 | rev | sed s/,//g) #[fg=colour16]| #(pmset -g batt | awk '{print $4}'| tail -1)h "
+set -g status-right "#[fg=colour13,bg=colour10]⇑ #(uptime | awk '{print $3}'|sed 's/,//')#[fg=colour241] |#[fg=colour2,bg=colour10] ♬ #(sh ~/dotfiles/tmux/current_track.sh) #[fg=colour13,bg=colour11] %d-%b-%Y #[fg=colour241]|#[fg=colour13,bg=colour11,bold]%l:%M %p #[fg=colour11,bg=colour13,bold] ♡ #(uptime | rev | cut -d":" -f1 | rev | sed s/,//g) #[fg=colour16]| #(pmset -g batt | awk '{print $5}'| tail -1)h "
 set -g status-right-length 401
 set -g window-status-format '#[fg=colour244,bg=colour10,nobold,noitalics,nounderscore] #I| #[fg=colour1]#W '
 set -g window-status-current-format '#[fg=colour231,bg=colour1] #I| #[fg=colour231,bg=colour1,bold]#W '
