--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,7 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-'\' run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 
 # increase display time
@@ -47,7 +47,7 @@ set -g display-panes-time 1200
 
 
 # more intuitive keybindings for splitting
-bind \ split-window -h -c "#{pane_current_path}"
+bind '\' split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 
@@ -60,7 +60,7 @@ bind C-r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 # Set the term environment variable when using tmux
 set -g default-terminal "screen-256color"
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Provide access to the clipboard for pbpaste, pbcopy (details: http://goo.gl/DN82E)
 set-window-option -g automatic-rename on
